swen430as2/test_files/invalid/is/Is_Invalid_01-TC01.while
void main() {
    int x = 0;
    assert x is null;
}
